// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`index > vite-native callback 1`] = `
{
  "author": "ice breaker <1324318532@qq.com>",
  "bugs": {
    "url": "https://github.com/weapp-vite/weapp-vite/issues",
  },
  "dependencies": {
    "@vant/weapp": "^1.11.7",
    "dayjs": "^1.11.13",
    "lodash": "^4.17.21",
    "tdesign-miniprogram": "^1.7.0",
  },
  "description": "",
  "devDependencies": {
    "autoprefixer": "^10.4.20",
    "miniprogram-api-typings": "latest",
    "miniprogram-simulate": "^1.6.1",
    "postcss": "^8.4.47",
    "sharp": "^0.33.5",
    "svgo": "^3.3.2",
    "tailwindcss": "^3.4.14",
    "typescript": "latest",
    "vite-imagetools": "^7.0.4",
    "vite-plugin-image-optimizer": "^1.1.8",
    "weapp-tailwindcss": "^3.6.2",
    "weapp-vite": "latest",
  },
  "keywords": [],
  "license": "ISC",
  "main": "index.js",
  "name": "vite-native",
  "private": true,
  "repository": {
    "directory": "apps/vite-native",
    "type": "git",
    "url": "git+https://github.com/weapp-vite/weapp-vite.git",
  },
  "scripts": {
    "build": "weapp-vite build",
    "build-npm": "weapp-vite build-npm",
    "build:debug": "cross-env DEBUG=weapp-vite:* weapp-vite build",
    "dev": "weapp-vite dev",
    "dev:0": "weapp-vite dev -m x",
    "dev:1": "weapp-vite dev --mode xx",
    "dev:debug": "cross-env DEBUG=weapp-vite:* weapp-vite dev",
    "g": "weapp-vite generate",
    "import-json": "tsx scripts/import-json.ts",
    "npm": "weapp-vite npm",
    "open": "weapp-vite open",
    "postinstall": "weapp-tw patch",
    "wxs": "tsup",
  },
  "type": "module",
  "version": "1.0.0",
}
`;

exports[`index > vite-native callback 2`] = `
{
  "appid": "wx6ffee4673b257014",
  "compileType": "miniprogram",
  "condition": {},
  "editorSetting": {
    "tabIndent": "auto",
    "tabSize": 2,
  },
  "libVersion": "trial",
  "miniprogramRoot": "dist/",
  "packOptions": {
    "ignore": [],
    "include": [],
  },
  "setting": {
    "babelSetting": {
      "disablePlugins": [],
      "ignore": [],
      "outputPath": "",
    },
    "coverView": true,
    "enhance": true,
    "es6": true,
    "minified": true,
    "packNpmManually": true,
    "packNpmRelationList": [
      {
        "miniprogramNpmDistDir": "./dist",
        "packageJsonPath": "./package.json",
      },
    ],
    "postcss": true,
    "showShadowRootInWxmlPanel": true,
  },
  "srcMiniprogramRoot": "dist/",
}
`;

exports[`index > vite-native vite.config.ts 1`] = `
"import { defineConfig } from 'weapp-vite/config'

export default defineConfig({
  weapp: {
    // weapp-vite options
  },
})
"
`;

exports[`index > vite-native-skyline callback 1`] = `
{
  "author": "ice breaker <1324318532@qq.com>",
  "bugs": {
    "url": "https://github.com/weapp-vite/weapp-vite/issues",
  },
  "description": "",
  "devDependencies": {
    "autoprefixer": "^10.4.20",
    "miniprogram-api-typings": "latest",
    "postcss": "^8.4.47",
    "tailwindcss": "^3.4.14",
    "typescript": "latest",
    "weapp-tailwindcss": "^3.6.2",
    "weapp-vite": "latest",
  },
  "keywords": [],
  "license": "ISC",
  "main": "index.js",
  "name": "vite-native-skyline",
  "private": true,
  "repository": {
    "directory": "apps/vite-native-skyline",
    "type": "git",
    "url": "git+https://github.com/weapp-vite/weapp-vite.git",
  },
  "scripts": {
    "build": "weapp-vite build",
    "build-npm": "weapp-vite build-npm",
    "dev": "weapp-vite dev",
    "g": "weapp-vite generate",
    "open": "weapp-vite open",
    "postinstall": "weapp-tw patch",
  },
  "type": "module",
  "version": "1.0.0",
}
`;

exports[`index > vite-native-skyline callback 2`] = `
{
  "appid": "wx6ffee4673b257014",
  "compileType": "miniprogram",
  "condition": {},
  "editorSetting": {
    "tabIndent": "auto",
    "tabSize": 2,
  },
  "libVersion": "trial",
  "miniprogramRoot": "dist/",
  "packOptions": {
    "ignore": [],
    "include": [],
  },
  "setting": {
    "babelSetting": {
      "disablePlugins": [],
      "ignore": [],
      "outputPath": "",
    },
    "coverView": true,
    "enhance": true,
    "es6": true,
    "minified": true,
    "packNpmManually": true,
    "packNpmRelationList": [
      {
        "miniprogramNpmDistDir": "./dist",
        "packageJsonPath": "./package.json",
      },
    ],
    "postcss": true,
    "showShadowRootInWxmlPanel": true,
  },
  "srcMiniprogramRoot": "dist/",
}
`;

exports[`index > vite-native-skyline vite.config.ts 1`] = `
"import { defineConfig } from 'weapp-vite/config'

export default defineConfig({
  weapp: {
    // weapp-vite options
  },
})
"
`;

exports[`index > vite-native-ts callback 1`] = `
{
  "author": "ice breaker <1324318532@qq.com>",
  "bugs": {
    "url": "https://github.com/weapp-vite/weapp-vite/issues",
  },
  "description": "",
  "devDependencies": {
    "miniprogram-api-typings": "latest",
    "typescript": "latest",
    "weapp-vite": "latest",
  },
  "keywords": [],
  "license": "",
  "name": "vite-native-ts",
  "private": true,
  "repository": {
    "directory": "apps/vite-native-ts",
    "type": "git",
    "url": "git+https://github.com/weapp-vite/weapp-vite.git",
  },
  "scripts": {
    "build": "weapp-vite build",
    "build-npm": "weapp-vite build-npm",
    "dev": "weapp-vite dev",
    "g": "weapp-vite generate",
    "open": "weapp-vite open",
  },
  "type": "module",
  "version": "1.0.0",
}
`;

exports[`index > vite-native-ts callback 2`] = `
{
  "appid": "wx6ffee4673b257014",
  "compileType": "miniprogram",
  "condition": {},
  "description": "项目配置文件",
  "editorSetting": {
    "tabIndent": "insertSpaces",
    "tabSize": 2,
  },
  "libVersion": "trial",
  "miniprogramRoot": "dist/",
  "packOptions": {
    "ignore": [],
    "include": [],
  },
  "setting": {
    "babelSetting": {
      "disablePlugins": [],
      "ignore": [],
      "outputPath": "",
    },
    "compileHotReLoad": false,
    "coverView": false,
    "enhance": false,
    "ignoreUploadUnusedFiles": true,
    "minified": false,
    "packNpmManually": true,
    "packNpmRelationList": [
      {
        "miniprogramNpmDistDir": "./dist",
        "packageJsonPath": "./package.json",
      },
    ],
    "postcss": false,
    "showShadowRootInWxmlPanel": false,
    "skylineRenderEnable": true,
    "useCompilerPlugins": [
      "typescript",
    ],
  },
  "simulatorPluginLibVersion": {},
  "simulatorType": "wechat",
  "srcMiniprogramRoot": "dist/",
}
`;

exports[`index > vite-native-ts vite.config.ts 1`] = `
"import { defineConfig } from 'weapp-vite/config'

export default defineConfig({
  weapp: {
    // weapp-vite options
  },
})
"
`;

exports[`index > vite-native-ts-skyline callback 1`] = `
{
  "author": "ice breaker <1324318532@qq.com>",
  "bugs": {
    "url": "https://github.com/weapp-vite/weapp-vite/issues",
  },
  "dependencies": {
    "tdesign-miniprogram": "^1.7.0",
  },
  "description": "",
  "devDependencies": {
    "autoprefixer": "^10.4.20",
    "miniprogram-api-typings": "latest",
    "postcss": "^8.4.47",
    "tailwindcss": "^3.4.14",
    "typescript": "latest",
    "weapp-tailwindcss": "^3.6.2",
    "weapp-vite": "latest",
  },
  "keywords": [],
  "license": "",
  "name": "vite-native-ts-skyline",
  "private": true,
  "repository": {
    "directory": "apps/vite-native-ts-skyline",
    "type": "git",
    "url": "git+https://github.com/weapp-vite/weapp-vite.git",
  },
  "scripts": {
    "build": "weapp-vite build",
    "build-npm": "weapp-vite build-npm",
    "dev": "weapp-vite dev",
    "g": "weapp-vite generate",
    "open": "weapp-vite open",
    "postinstall": "weapp-tw patch",
  },
  "type": "module",
  "version": "1.0.0",
}
`;

exports[`index > vite-native-ts-skyline callback 2`] = `
{
  "appid": "wx6ffee4673b257014",
  "compileType": "miniprogram",
  "condition": {},
  "description": "项目配置文件",
  "editorSetting": {
    "tabIndent": "insertSpaces",
    "tabSize": 2,
  },
  "libVersion": "trial",
  "miniprogramRoot": "dist/",
  "packOptions": {
    "ignore": [],
    "include": [],
  },
  "setting": {
    "babelSetting": {
      "disablePlugins": [],
      "ignore": [],
      "outputPath": "",
    },
    "compileHotReLoad": false,
    "coverView": false,
    "enhance": true,
    "es6": true,
    "ignoreUploadUnusedFiles": true,
    "minified": false,
    "packNpmManually": true,
    "packNpmRelationList": [
      {
        "miniprogramNpmDistDir": "./dist",
        "packageJsonPath": "./package.json",
      },
    ],
    "postcss": false,
    "showShadowRootInWxmlPanel": false,
    "skylineRenderEnable": true,
    "useCompilerPlugins": [
      "typescript",
    ],
  },
  "simulatorPluginLibVersion": {},
  "simulatorType": "wechat",
  "srcMiniprogramRoot": "dist/",
}
`;

exports[`index > vite-native-ts-skyline vite.config.ts 1`] = `
"import { defineConfig } from 'weapp-vite/config'

export default defineConfig({
  weapp: {
    // weapp-vite options
  },
})
"
`;
